--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Iris Flower Prediction</title>
 </head>
 <body>
+    <h1>Sinh viên thực hiện: Võ Thành Đạt - MSSV: B2106786</h1>
     <h2>Nhập thông số của mẫu hoa Iris</h2>
     <form action="/result" method="POST">
         <label for="sepal_length">Sepal Length:</label>
